# code-health-toolkit

./: .editorconfig  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: adoption-playbook.md  agent-refactor-prompt.md  decision-record-template.md  operating-model.md  security-and-compliance.md  work-laptop-handoff.md
templates/: AGENTS.md  github-actions-code-health.yml  importlinter.ini  pyproject-code-health.toml
tests/: test_rank_hotspots.py
tools/: audit_codebase.sh  prepare_target_repo.sh  rank_hotspots.py
